app/jdh/staging/ingress-mailpit.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: mailpit-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Mailpit"
spec:
  tls:
    - hosts:
        - mailpit.staging.jdh.pada.one
      secretName: mailpit-tls
  rules:
    - host: mailpit.staging.jdh.pada.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailpit
                port:
                  name: http
